--- a/Comp354Project/Project-UI/src/app/app.component.html
+++ b/Comp354Project/Project-UI/src/app/app.component.html
@@ -24,9 +24,8 @@
           -->
 
         </div>
-      </div>
       <router-outlet></router-outlet>
-    </div>
+    <!--</div>
   </div>
-</div>
+</div>-->
 <footer></footer>
