Fixed styling issues introduced by bootstrap implementaion

--- a/Comp354Project/Project-UI/src/app/Components/footer/footer.component.html
+++ b/Comp354Project/Project-UI/src/app/Components/footer/footer.component.html
@@ -1,11 +1,14 @@
 
-<div style="height:250px;border-style:solid;border-color:black;background-color:#163172;">
+<div class="clearfix" style="height:250px;border-style:solid;border-color:black;background-color:#163172;">
 
-    <div>
+    <div class="float-left">
         <app-product-categories></app-product-categories>
     </div>
+    <!--
     <div style="height:170px;width:800px;float:left;"></div>
     <div style="height:170px;width:200px;float:left;">
+    -->
+    <div class="float-right">
            <app-social-media-buttons></app-social-media-buttons>
       </div>
 
