--- a/Comp354Project/Project-UI/src/app/Components/product-categories/product-categories.component.html
+++ b/Comp354Project/Project-UI/src/app/Components/product-categories/product-categories.component.html
@@ -1,4 +1,4 @@
-<div class="sidebar">
+<div class="text-white">
 <ul *ngFor="let department of departments" style="list-style: none;">
   <li><strong>{{ department.name }}</strong>
     <ul *ngFor="let category of department.categories" style="list-style: none;">
