--- a/Comp354Project/Project-UI/src/app/Components/social-media-buttons/social-media-buttons.component.html
+++ b/Comp354Project/Project-UI/src/app/Components/social-media-buttons/social-media-buttons.component.html
@@ -20,8 +20,8 @@
 </body>
 -->
 
-<div class="jumbotron">
-    <div class="row">
+<div class="">
+    <div class="clearfix">
         <div class="col">
             <fb-like url={{url}}></fb-like>
         </div>
