--- a/Comp354Project/Project-UI/src/app/app.component.html
+++ b/Comp354Project/Project-UI/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!--<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
-<div class="container">
+<div class="ml-2 mr-2">
     <header></header>
 <!--
 <div class="container">
@@ -21,12 +21,12 @@
               <li class="list-inline-item"><a class="nav-link" href="/logout" (click)=logout()>Logout</a></li>
             </div>
           </ul>
-          -->
+          -
 
         </div>
-      </div>
+      </div> -->
       <router-outlet></router-outlet>
-    </div>
-  </div>
+    <!--</div>
+  </div> -->
 </div>
 <footer></footer>
