--- a/Comp354Project/Project-UI/src/app/Components/product-page/product-page.component.css
+++ b/Comp354Project/Project-UI/src/app/Components/product-page/product-page.component.css
@@ -7,14 +7,15 @@
   display: grid;
   grid-template-columns: auto auto auto auto;
 }
-
+/*
 #button1{
 padding:10px;
 width:20%;
 }
+
 #button2{
 padding:10px;
 width:20%;
 position:relative;
 left:845px;
-}
+}*/
