made html for adding a review

--- a/Comp354Project/Project-UI/src/app/Components/review/review.component.html
+++ b/Comp354Project/Project-UI/src/app/Components/review/review.component.html
@@ -1,1 +1,34 @@
-<p>review works!</p>
+<!-- This component lets you add a review, given that you are logged in.-->
+<!-- display-review will show all reviews on a product if any-->
+
+<div style="height:500px;width:400px;border-style:solid;border-color:black;">
+
+
+
+    <h2>Add your review for this item!!</h2>
+    <br/>
+
+    <br/>
+    Add your rating:
+    <select>
+        <option>5</option>
+        <option>4</option>
+        <option>3</option>
+        <option>2</option>
+        <option>1</option>
+    </select>
+
+    <br/>
+
+    <textarea rows="4" cols="50" placeholder="Enter your review."></textarea>
+
+
+    <br/>
+
+    <!-- if not logged it, show it as Log in to review-->
+    <!--<button type="button">Add Review</button>-->
+    <button onclick="addReview()">Add Review</button>
+
+
+
+</div>
