added display review component

--- a/Comp354Project/Project-UI/src/app/Components/product-details/product-details.component.html
+++ b/Comp354Project/Project-UI/src/app/Components/product-details/product-details.component.html
@@ -23,5 +23,10 @@
 </div>
 -->
 
+<!-- if a product has reviews, show reviews, or show no reviews yet!-->
+<app-display-reviews></app-display-reviews>
+
+<br>
+<br>
 <!-- Review area-->
 <app-review></app-review>
