--- a/Comp354Project/Project-UI/src/app/Components/order-list/order-list.component.html
+++ b/Comp354Project/Project-UI/src/app/Components/order-list/order-list.component.html
@@ -1,11 +1,8 @@
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <div class="panel-heading">
-    <h2>Account List</h2>
+    <h2>Order List</h2>
 </div>
 <div class="search-div">
-    <button mat-raised-button (click)="createAccount()">
-        <mat-icon>add</mat-icon>Create
-    </button>
     <mat-form-field class="search-form-field" floatLabel="never">
         <input matInput type="text" [(ngModel)]="searchKey" placeholder="Search..." autocomplete="off" (keyup)="applyFilter()">
         <button mat-button matSuffix mat-icon-button aria-label="Clear" *ngIf="searchKey" (click)="onSearchClear()">
@@ -17,23 +14,17 @@
 <div class="mat-elevation-z8">
     <mat-table [dataSource]="listData" matSort>
         <ng-container matColumnDef="id">
-            <mat-header-cell *matHeaderCellDef mat-sort-header>Id</mat-header-cell>
-            <mat-cell *matCellDef="let account">{{account.id}}</mat-cell>
+            <mat-header-cell *matHeaderCellDef mat-sort-header>Order #</mat-header-cell>
+            <mat-cell *matCellDef="let accountOrder">{{accountOrder.id}}</mat-cell>
         </ng-container>
-        <ng-container matColumnDef="name">
-            <mat-header-cell *matHeaderCellDef mat-sort-header>Name</mat-header-cell>
-            <mat-cell *matCellDef="let account">{{account.name}}</mat-cell>
-        </ng-container>
-        <ng-container matColumnDef="email">
-            <mat-header-cell *matHeaderCellDef mat-sort-header>Email</mat-header-cell>
-            <mat-cell *matCellDef="let account">{{account.email}}</mat-cell>
+        <ng-container matColumnDef="date">
+            <mat-header-cell *matHeaderCellDef mat-sort-header>Date</mat-header-cell>
+            <mat-cell *matCellDef="let accountOrder">{{accountOrder.date}}</mat-cell>
         </ng-container>
         <ng-container matColumnDef="actions">
             <mat-header-cell *matHeaderCellDef></mat-header-cell>
-            <mat-cell *matCellDef="let account">
-                <button mat-icon-button (click)="accountDetails(account.id)"><mat-icon>launch</mat-icon></button>
-                <button mat-icon-button (click)="updateAccount(account)"><mat-icon>edit</mat-icon></button>
-                <button mat-icon-button color="warn" (click)="deleteAccount(account.id)"><mat-icon>delete_outline</mat-icon></button>
+            <mat-cell *matCellDef="let accountOrder">
+                <button mat-icon-button (click)="orderDetails(accountOrder.idAccountOrder)"><mat-icon>launch</mat-icon></button>
             </mat-cell>
         </ng-container>
 
