--- a/Comp354Project/Project-UI/src/app/Components/order-list/order-list.component.html
+++ b/Comp354Project/Project-UI/src/app/Components/order-list/order-list.component.html
@@ -11,42 +11,7 @@
     </mat-form-field>
 </div>
 
-<!--<div class="mat-elevation-z8">
-    <mat-table [dataSource]="listData" matSort>
-        <ng-container matColumnDef="id">
-            <mat-header-cell *matHeaderCellDef mat-sort-header>Order #</mat-header-cell>
-            <mat-cell *matCellDef="let accountOrder">{{accountOrder.id}}</mat-cell>
-        </ng-container>
-        <ng-container matColumnDef="date">
-            <mat-header-cell *matHeaderCellDef mat-sort-header>Date</mat-header-cell>
-            <mat-cell *matCellDef="let accountOrder">{{accountOrder.date}}</mat-cell>
-        </ng-container>
-        <ng-container matColumnDef="actions">
-            <mat-header-cell *matHeaderCellDef></mat-header-cell>
-            <mat-cell *matCellDef="let accountOrder">
-                <button mat-icon-button (click)="orderDetails(accountOrder.idAccountOrder)"><mat-icon>launch</mat-icon></button>
-            </mat-cell>
-        </ng-container>
-
-        <ng-container matColumnDef="loading">
-            <mat-footer-cell *matFooterCellDef colspan="4">
-                Loading...
-            </mat-footer-cell>
-        </ng-container>
-        <ng-container matColumnDef="noData">
-            <mat-footer-cell *matFooterCellDef colspan="4">
-                No data found.
-            </mat-footer-cell>
-        </ng-container>
-
-        <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-        <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-
-        <mat-footer-row *matFooterRowDef="['loading']" [ngClass]="{'hide':listData!=null}"></mat-footer-row>
-        <mat-footer-row *matFooterRowDef="['noData']" [ngClass]="{'hide':!(listData!=null && listData.data.length==0)}"></mat-footer-row>
-    </mat-table>
-    <mat-paginator [pageSizeOptions]="[5, 10, 25, 50]" [pageSize]="5" showFirstLastButtons></mat-paginator>
-</div>-->
+<!-- CSS is in order-list.component.css -->
 <div class="mat-elevation-z8">
     <table mat-table [dataSource]="listData" matSort multiTemplateDataRows>
         <ng-container matColumnDef="id">
