cart page not included

--- a/Comp354Project/Project-UI/src/app/Components/header/header.component.html
+++ b/Comp354Project/Project-UI/src/app/Components/header/header.component.html
@@ -55,5 +55,5 @@
             <button *ngIf="searchText == ''" id = "searchButton" type="button" (click) = "setSearchText()" [routerLink]="''"> Search </button>
         </div>
     </div>
-
+<button type="button" [routerLink] = "'/cartpage'"name="button">cart</button>
 </div>
