--- a/Comp354Project/Project-UI/src/app/Components/shipping/shipping.component.html
+++ b/Comp354Project/Project-UI/src/app/Components/shipping/shipping.component.html
@@ -36,7 +36,7 @@
             <div>
                 <br /> <br />
     <mat-card-actions>
-        <input type="submit" value="Deliver to this address">
+        <button type="submit" value="Deliver to this address" [routerLink] = "'/review'">Deliver to this adress</button>
     </mat-card-actions>
             </div>
         </div>
