--- a/Comp354Project/Project-UI/src/app/Components/shipping2/shipping2.component.html
+++ b/Comp354Project/Project-UI/src/app/Components/shipping2/shipping2.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<!-- <div class="container">
     <div class="row">
         <div class="col-md-8 order-md-1">
             <div class="card">
@@ -18,4 +18,4 @@
 
     </div>
 
-</div>
+</div> -->
