--- a/Comp354Project/Project-UI/src/app/Components/product-details/product-details.component.html
+++ b/Comp354Project/Project-UI/src/app/Components/product-details/product-details.component.html
@@ -10,7 +10,7 @@
         <p>Brand: {{product.brand}}</p>
     </mat-card-content>
     <mat-card-actions>
-        <button (click)="addToCart()">Add to cart</button>
+        <button (click)="addToCart(product)">Add to cart</button>
     </mat-card-actions>
 </mat-card>
 <br/>
