--- a/Comp354Project/Project-UI/src/app/Components/header/header.component.html
+++ b/Comp354Project/Project-UI/src/app/Components/header/header.component.html
@@ -1,4 +1,4 @@
-
+<div>
     <div class="w-100" style="height:100px;border-style:solid;border-color:black;background-color:#163172;">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
