--- a/Comp354Project/Project-UI/src/app/Components/header/header.component.html
+++ b/Comp354Project/Project-UI/src/app/Components/header/header.component.html
@@ -52,19 +52,14 @@
                 </div>
             </div>
         </div>
-    </div>
-
-    <br/>
-    <br/>
-    <br/>
-    <br/>
+    </div>    
     <!-- Search Bar-->
-    <div>
+    <!-- <div>
         <div style="display: inline-block">
             <input id = "searchBar" type="search" placeholder="Search 354TheStars.." [(ngModel)] = "searchText" >
             <button *ngIf="searchText != ''" id = "searchButton" type="button" (click) = "setSearchText()" [routerLink]="'/products'"> Search </button>
             <button *ngIf="searchText == ''" id = "searchButton" type="button" (click) = "setSearchText()" [routerLink]="''"> Search </button>
         </div>
     </div>
-<button type="button" [routerLink] = "'/cartpage'"name="button">cart</button>
+<button type="button" [routerLink] = "'/cartpage'"name="button">cart</button> -->
 </div>
