--- a/Comp354Project/Project-UI/src/app/Components/review/review.component.html
+++ b/Comp354Project/Project-UI/src/app/Components/review/review.component.html
@@ -11,7 +11,7 @@
     <form (ngSubmit)="onSubmit()" >
         <div class="form-group">
             <label>Description</label>
-            <input type="text" class="form-control" id="description" required [(ngModel)]="review.description" name="description">
+            <input type="text" class="form-control" id="description" name="description" required [(ngModel)]="review.description">
         </div>
 
         <div class="form-group">
