--- a/Comp354Project/Project-UI/src/app/Components/product-page/product-page.component.css
+++ b/Comp354Project/Project-UI/src/app/Components/product-page/product-page.component.css
@@ -7,6 +7,11 @@
   display: grid;
   grid-template-columns: auto auto auto auto;
 }
+.image{
+  height: 200px;
+  object-fit: contain;
+}
+
 /*
 #button1{
 padding:10px;
