--- a/Comp354Project/Project-UI/src/app/Components/product-details/product-details.component.html
+++ b/Comp354Project/Project-UI/src/app/Components/product-details/product-details.component.html
@@ -11,7 +11,7 @@
     </mat-card-content>
     <mat-card-actions>
         <button (click)="addToCart()">Add to cart</button>
-        <button *ngIf="product.userId == userId" (click)="deleteProduct()">Delete {{product.name}}</button>
+        <button *ngIf="(product.userId == userId || userId == 0)" (click)="deleteProduct()">Delete {{product.name}}</button>
     </mat-card-actions>
 </mat-card>
 <br/>
