--- a/Comp354Project/Project-UI/src/app/Components/header/header.component.html
+++ b/Comp354Project/Project-UI/src/app/Components/header/header.component.html
@@ -49,6 +49,9 @@
                             <button  (click)=logout() ngbDropdownItem>Sign Out</button>
                         </div>
                     </div>
+                    <div>
+                        <button type="button" class="btn btn-primary" [routerLink] = "'/cartpage'"name="button">Cart</button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -58,13 +61,4 @@
     <br/>
     <br/>
     <br/>
-    <!-- Search Bar-->
-    <div>
-        <div style="display: inline-block">
-            <input id = "searchBar" type="search" placeholder="Search 354TheStars.." [(ngModel)] = "searchText" >
-            <button *ngIf="searchText != ''" id = "searchButton" type="button" (click) = "setSearchText()" [routerLink]="'/products'"> Search </button>
-            <button *ngIf="searchText == ''" id = "searchButton" type="button" (click) = "setSearchText()" [routerLink]="''"> Search </button>
-        </div>
-    </div>
-<button type="button" [routerLink] = "'/cartpage'"name="button">cart</button>
 </div>
